--- a/public/previsao.html
+++ b/public/previsao.html
@@ -76,7 +76,8 @@
     </div>
 
     <script>
-        const apiKey = 'SUA_CHAVE_API_AQUI'; // Substitua pela sua chave API do OpenWeatherMap
+        const apiKey = '4a02c99169e65be851bb284395026146
+'; // Substitua pela sua chave API do OpenWeatherMap
         
         document.getElementById('formulario-cidade').addEventListener('submit', function(e) {
             e.preventDefault();
