--- a/public/previsao.html
+++ b/public/previsao.html
@@ -3,127 +3,177 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Previsão do Tempo</title>
+    <title>Previsão do Tempo Avançada</title>
     <style>
+        :root {
+            --primary-color: #0066cc;
+            --background-color: #f0f8ff;
+            --text-color: #333;
+            --card-background: white;
+        }
+
+        .dark-mode {
+            --primary-color: #4da6ff;
+            --background-color: #1a1a1a;
+            --text-color: #f0f0f0;
+            --card-background: #2c2c2c;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            max-width: 800px;
+            max-width: 1000px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f0f8ff;
-            color: #333;
+            background-color: var(--background-color);
+            color: var(--text-color);
+            transition: background-color 0.3s, color 0.3s;
         }
+
+        h1, h2, h3 {
+            color: var(--primary-color);
+        }
+
         h1 {
-            color: #0066cc;
             text-align: center;
             font-size: 2.5em;
             margin-bottom: 30px;
         }
+
         form {
             display: flex;
             justify-content: center;
             margin-bottom: 20px;
         }
-        input[type="text"] {
+
+        input[type="text"], input[type="date"] {
             padding: 12px;
             font-size: 16px;
             border: 1px solid #ddd;
-            border-radius: 4px 0 0 4px;
+            border-radius: 4px;
             width: 60%;
             outline: none;
         }
+
         button {
             padding: 12px 20px;
             font-size: 16px;
-            background-color: #0066cc;
-            color: white;
-            border: none;
-            border-radius: 0 4px 4px 0;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #0055aa;
-        }
-        #previsao {
-            background-color: white;
-            border-radius: 8px;
-            padding: 30px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.1);
-        }
-        #nome-cidade {
-            font-size: 2em;
-            color: #0066cc;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        .info-principal {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            margin-bottom: 30px;
-        }
-        .temperatura {
-            font-size: 4em;
-            font-weight: bold;
-            color: #0066cc;
-        }
-        .descricao {
-            font-size: 1.5em;
-            text-transform: capitalize;
-        }
-        #icone-tempo {
-            width: 100px;
-            height: 100px;
-        }
-        .info-secundaria {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-        }
-        .info-item {
-            background-color: #f9f9f9;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-        }
-        .info-item h3 {
-            margin-top: 0;
-            color: #0066cc;
-        }
-        .escondido {
-            display: none;
-        }
-        #erro {
-            color: #cc0000;
-            text-align: center;
-            margin-top: 20px;
-            font-weight: bold;
-        }
-        #botao-geolocalizacao {
-            display: block;
-            margin: 20px auto;
-            padding: 12px 20px;
-            font-size: 16px;
-            background-color: #4CAF50;
+            background-color: var(--primary-color);
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s;
         }
-        #botao-geolocalizacao:hover {
-            background-color: #45a049;
+
+        button:hover {
+            opacity: 0.9;
+        }
+
+        #previsao, .forecast-card {
+            background-color: var(--card-background);
+            border-radius: 8px;
+            padding: 30px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+        }
+
+        #nome-cidade {
+            font-size: 2em;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .info-principal {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin-bottom: 30px;
+        }
+
+        .temperatura {
+            font-size: 4em;
+            font-weight: bold;
+            color: var(--primary-color);
+        }
+
+        .descricao {
+            font-size: 1.5em;
+            text-transform: capitalize;
+        }
+
+        #icone-tempo {
+            width: 100px;
+            height: 100px;
+        }
+
+        .info-secundaria {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+        }
+
+        .info-item {
+            background-color: rgba(249, 249, 249, 0.1);
+            padding: 15px;
+            border-radius: 8px;
+            text-align: center;
+        }
+
+        .info-item h3 {
+            margin-top: 0;
+        }
+
+        .escondido {
+            display: none;
+        }
+
+        #erro {
+            color: #cc0000;
+            text-align: center;
+            margin-top: 20px;
+            font-weight: bold;
+        }
+
+        #botao-geolocalizacao, #botao-modo-escuro {
+            display: block;
+            margin: 20px auto;
+        }
+
+        #previsao-dias, #previsao-horas {
+            display: flex;
+            overflow-x: auto;
+            margin-top: 20px;
+            padding-bottom: 20px;
+        }
+
+        .forecast-card {
+            min-width: 150px;
+            margin-right: 15px;
+            text-align: center;
+        }
+
+        .forecast-card img {
+            width: 50px;
+            height: 50px;
+        }
+
+        #calendario {
+            margin-top: 20px;
+        }
+
+        #calendario input {
+            margin-right: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Previsão do Tempo</h1>
+    <h1>Previsão do Tempo Avançada</h1>
     <form id="formulario-cidade">
         <input type="text" id="cidade" placeholder="Digite o nome da cidade" required>
         <button type="submit">Buscar</button>
     </form>
     <button id="botao-geolocalizacao">Usar Minha Localização</button>
+    <button id="botao-modo-escuro">Alternar Modo Escuro</button>
     <div id="erro" class="escondido"></div>
     <div id="previsao" class="escondido">
         <h2 id="nome-cidade"></h2>
@@ -161,10 +211,21 @@
             </div>
         </div>
     </div>
+    <h2>Previsão para os Próximos Dias</h2>
+    <div id="previsao-dias"></div>
+    <h2>Previsão por Hora</h2>
+    <div id="previsao-horas"></div>
+    <div id="calendario">
+        <h2>Integração com Calendário</h2>
+        <input type="date" id="data-evento">
+        <button onclick="verificarClimaEvento()">Verificar Clima para Evento</button>
+        <div id="clima-evento"></div>
+    </div>
 
     <script>
         const apiKey = '4a02c99169e65be851bb284395026146';
-        
+        let notificationPermission = false;
+
         document.getElementById('formulario-cidade').addEventListener('submit', function(e) {
             e.preventDefault();
             const cidade = document.getElementById('cidade').value;
@@ -184,6 +245,10 @@
             } else {
                 exibirErro("Geolocalização não é suportada pelo seu navegador.");
             }
+        });
+
+        document.getElementById('botao-modo-escuro').addEventListener('click', function() {
+            document.body.classList.toggle('dark-mode');
         });
 
         function buscarPrevisaoPorCidade(cidade) {
@@ -209,7 +274,10 @@
                 })
                 .then(data => {
                     exibirPrevisao(data);
+                    exibirPrevisaoDias(data);
+                    exibirPrevisaoHoras(data);
                     esconderErro();
+                    solicitarPermissaoNotificacao();
                 })
                 .catch(error => {
                     console.error('Erro ao buscar previsão:', error);
@@ -226,11 +294,9 @@
             document.getElementById('umidade').textContent = previsaoAtual.main.humidity;
             document.getElementById('vento').textContent = (previsaoAtual.wind.speed * 3.6).toFixed(1);
             
-            // Probabilidade de chuva (convertida para porcentagem)
             const probChuva = previsaoAtual.pop * 100;
             document.getElementById('prob-chuva').textContent = probChuva.toFixed(0);
 
-            // Nascer e pôr do sol
             const nascerSol = new Date(data.city.sunrise * 1000);
             const porSol = new Date(data.city.sunset * 1000);
             document.getElementById('nascer-sol').textContent = nascerSol.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
@@ -243,6 +309,51 @@
             document.getElementById('previsao').classList.remove('escondido');
         }
 
+        function exibirPrevisaoDias(data) {
+            const previsaoDiasContainer = document.getElementById('previsao-dias');
+            previsaoDiasContainer.innerHTML = '';
+
+            const previsoesPorDia = data.list.reduce((acc, previsao) => {
+                const data = new Date(previsao.dt * 1000);
+                const dataFormatada = data.toDateString();
+                if (!acc[dataFormatada]) {
+                    acc[dataFormatada] = previsao;
+                }
+                return acc;
+            }, {});
+
+            Object.values(previsoesPorDia).slice(0, 5).forEach(previsao => {
+                const data = new Date(previsao.dt * 1000);
+                const card = document.createElement('div');
+                card.className = 'forecast-card';
+                card.innerHTML = `
+                    <h3>${data.toLocaleDateString('pt-BR', { weekday: 'short', month: 'short', day: 'numeric' })}</h3>
+                    <img src="https://openweathermap.org/img/wn/${previsao.weather[0].icon}.png" alt="${previsao.weather[0].description}">
+                    <p>${Math.round(previsao.main.temp)}°C</p>
+                    <p>${previsao.weather[0].description}</p>
+                `;
+                previsaoDiasContainer.appendChild(card);
+            });
+        }
+
+        function exibirPrevisaoHoras(data) {
+            const previsaoHorasContainer = document.getElementById('previsao-horas');
+            previsaoHorasContainer.innerHTML = '';
+
+            data.list.slice(0, 8).forEach(previsao => {
+                const hora = new Date(previsao.dt * 1000);
+                const card = document.createElement('div');
+                card.className = 'forecast-card';
+                card.innerHTML = `
+                    <h3>${hora.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })}</h3>
+                    <img src="https://openweathermap.org/img/wn/${previsao.weather[0].icon}.png" alt="${previsao.weather[0].description}">
+                    <p>${Math.round(previsao.main.temp)}°C</p>
+                    <p>${previsao.weather[0].description}</p>
+                `;
+                previsaoHorasContainer.appendChild(card);
+            });
+        }
+
         function exibirErro(mensagem) {
             const erroElement = document.getElementById('erro');
             erroElement.textContent = mensagem;
@@ -253,6 +364,76 @@
         function esconderErro() {
             document.getElementById('erro').classList.add('escondido');
         }
+
+        function solicitarPermissaoNotificacao() {
+            if (!("Notification" in window)) {
+                console.log("Este navegador não suporta notificações de desktop");
+            } else if (Notification.permission === "granted") {
+                notificationPermission = true;
+            } else if (Notification.permission !== "denied") {
+                Notification.requestPermission().then(function (permission) {
+                    if (permission === "granted") {
+                        notificationPermission = true;
+                    }
+                });
+            }
+        }
+
+        function enviarNotificacao(titulo, corpo) {
+            if (notificationPermission) {
+                new Notification(titulo, { body: corpo });
+            }
+        }
+
+function verificarClimaEvento() {
+            const dataEvento = document.getElementById('data-evento').value;
+            if (!dataEvento) {
+                alert('Por favor, selecione uma data para o evento.');
+                return;
+            }
+
+            const cidade = document.getElementById('cidade').value;
+            if (!cidade) {
+                alert('Por favor, digite o nome da cidade primeiro.');
+                return;
+            }
+
+            const url = `https://api.openweathermap.org/data/2.5/forecast?q=${encodeURIComponent(cidade)}&appid=${apiKey}&units=metric&lang=pt_br`;
+
+            fetch(url)
+                .then(response => response.json())
+                .then(data => {
+                    const previsaoEvento = data.list.find(previsao => {
+                        const dataPrevisao = new Date(previsao.dt * 1000);
+                        return dataPrevisao.toDateString() === new Date(dataEvento).toDateString();
+                    });
+
+                    if (previsaoEvento) {
+                        const climaEvento = document.getElementById('clima-evento');
+                        climaEvento.innerHTML = `
+                            <h3>Previsão para o evento (${new Date(dataEvento).toLocaleDateString()}):</h3>
+                            <p>Temperatura: ${Math.round(previsaoEvento.main.temp)}°C</p>
+                            <p>Condição: ${previsaoEvento.weather[0].description}</p>
+                            <p>Probabilidade de chuva: ${(previsaoEvento.pop * 100).toFixed(0)}%</p>
+                        `;
+
+                        if (previsaoEvento.pop > 0.5) {
+                            enviarNotificacao('Alerta de Chuva', `Há uma alta probabilidade de chuva (${(previsaoEvento.pop * 100).toFixed(0)}%) no dia do seu evento.`);
+                        }
+                    } else {
+                        document.getElementById('clima-evento').innerHTML = '<p>Previsão não disponível para esta data.</p>';
+                    }
+                })
+                .catch(error => {
+                    console.error('Erro ao buscar previsão para o evento:', error);
+                    document.getElementById('clima-evento').innerHTML = '<p>Erro ao buscar previsão para o evento.</p>';
+                });
+        }
+
+        // Inicialização
+        document.addEventListener('DOMContentLoaded', function() {
+            solicitarPermissaoNotificacao();
+        });
     </script>
 </body>
 </html>
