--- a/public/menu.html
+++ b/public/menu.html
@@ -90,9 +90,14 @@
             <a href="portalmotoboy.html" class="menu-option">
                 <i class="fas fa-diamond"></i>
                 Desafios
+                </a>
             <a href="previsao.html" class="menu-option">
                 <i class="fas fa-map-marked-alt"></i>
                 Previsão do Tempo
+            </a>
+            <a href="calcularcombustivel.html" class="menu-option">
+                <i class="fas fa-map-marked-alt"></i>
+                Calcular Combustivel
             </a>
             <a href="#" class="menu-option" id="btnLogout">
                 <i class="fas fa-sign-out-alt"></i>
