--- a/public/menu.html
+++ b/public/menu.html
@@ -96,7 +96,7 @@
                 Previsão do Tempo
             </a>
             <a href="calcularcombustivel.html" class="menu-option">
-                <i class="fas fa-map-marked-alt"></i>
+                <i class="fas fa-solid fa-gas-pump"></i>
                 Calcular Combustivel
             </a>
             <a href="#" class="menu-option" id="btnLogout">
