--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -1,6 +1,24 @@
-<iframe
-src="https://www.chatbase.co/chatbot-iframe/o39fDRhRRBb6vNLHrO8Rs"
-width="100%"
-style="height: 100%; min-height: 700px"
-frameborder="0"
-></iframe>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        .zoom-iframe {
+            transform: scale(1.5); /* Ajuste o valor para o nível de zoom desejado */
+            transform-origin: 0 0; /* Ajusta a origem do zoom para o canto superior esquerdo */
+            width: 100%;
+            height: 100%;
+            min-height: 700px;
+            border: 0;
+        }
+    </style>
+</head>
+<body>
+    <iframe
+        src="https://www.chatbase.co/chatbot-iframe/o39fDRhRRBb6vNLHrO8Rs"
+        class="zoom-iframe"
+        frameborder="0"
+    ></iframe>
+</body>
+</html>
