--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -4,21 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        .zoom-iframe {
-            transform: scale(1.5); /* Ajuste o valor para o nível de zoom desejado */
-            transform-origin: 0 0; /* Ajusta a origem do zoom para o canto superior esquerdo */
+        .iframe-container {
+            position: relative;
+            width: 100%;
+            height: 700px; /* Ajuste a altura conforme necessário */
+        }
+
+        .iframe-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
-            min-height: 700px;
             border: 0;
+            transform: scale(1.5); /* Ajuste o nível de zoom conforme necessário */
+            transform-origin: 0 0;
         }
     </style>
 </head>
 <body>
-    <iframe
-        src="https://www.chatbase.co/chatbot-iframe/o39fDRhRRBb6vNLHrO8Rs"
-        class="zoom-iframe"
-        frameborder="0"
-    ></iframe>
+    <div class="iframe-container">
+        <iframe
+            src="https://www.chatbase.co/chatbot-iframe/o39fDRhRRBb6vNLHrO8Rs"
+            frameborder="0"
+        ></iframe>
+    </div>
 </body>
 </html>
