--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        /* Estilo para garantir que o iframe se ajuste responsivamente */
         .iframe-container {
             position: relative;
             width: 100%;
-            height: 700px; /* Ajuste a altura conforme necessário */
+            height: 100vh; /* Ajusta a altura para ocupar toda a altura da visualização */
+            min-height: 700px; /* Garante que o iframe tenha uma altura mínima */
+            overflow: hidden; /* Evita barras de rolagem no contêiner */
         }
 
         .iframe-container iframe {
@@ -17,8 +20,11 @@
             width: 100%;
             height: 100%;
             border: 0;
-            transform: scale(1.5); /* Ajuste o nível de zoom conforme necessário */
-            transform-origin: 0 0;
+            transform: scale(1.5); /* Ajuste o valor para o nível de zoom desejado */
+            transform-origin: 0 0; /* Ajusta a origem do zoom para o canto superior esquerdo */
+            /* Adiciona uma margem negativa para garantir que o iframe não ultrapasse os limites do contêiner */
+            margin-left: -25%;
+            margin-top: -25%;
         }
     </style>
 </head>
