--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        /* Estilo para garantir que o iframe se ajuste responsivamente */
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Evita barras de rolagem na página */
+        }
         .iframe-container {
             position: relative;
             width: 100%;
             height: 100vh; /* Ajusta a altura para ocupar toda a altura da visualização */
-            min-height: 700px; /* Garante que o iframe tenha uma altura mínima */
-            overflow: hidden; /* Evita barras de rolagem no contêiner */
+            overflow: hidden; /* Garante que não haja barras de rolagem no contêiner */
         }
-
         .iframe-container iframe {
             position: absolute;
             top: 0;
@@ -22,7 +24,7 @@
             border: 0;
             transform: scale(1.5); /* Ajuste o valor para o nível de zoom desejado */
             transform-origin: 0 0; /* Ajusta a origem do zoom para o canto superior esquerdo */
-            /* Adiciona uma margem negativa para garantir que o iframe não ultrapasse os limites do contêiner */
+            /* Ajusta a posição para manter o conteúdo visível */
             margin-left: -25%;
             margin-top: -25%;
         }
