--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -9,24 +9,18 @@
             padding: 0;
             overflow: hidden; /* Evita barras de rolagem na página */
         }
+
         .iframe-container {
             position: relative;
-            width: 100%;
-            height: 100vh; /* Ajusta a altura para ocupar toda a altura da visualização */
+            width: 100vw; /* Ocupa toda a largura da visualização */
+            height: 100vh; /* Ocupa toda a altura da visualização */
             overflow: hidden; /* Garante que não haja barras de rolagem no contêiner */
         }
+
         .iframe-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 100%;
             border: 0;
-            transform: scale(1.5); /* Ajuste o valor para o nível de zoom desejado */
-            transform-origin: 0 0; /* Ajusta a origem do zoom para o canto superior esquerdo */
-            /* Ajusta a posição para manter o conteúdo visível */
-            margin-left: -25%;
-            margin-top: -25%;
         }
     </style>
 </head>
