--- a/public/ganhos.html
+++ b/public/ganhos.html
@@ -332,5 +332,17 @@
             }
         }
     </script>
+    <script>
+window.embeddedChatbotConfig = {
+chatbotId: "o39fDRhRRBb6vNLHrO8Rs",
+domain: "www.chatbase.co"
+}
+</script>
+<script
+src="https://www.chatbase.co/embed.min.js"
+chatbotId="o39fDRhRRBb6vNLHrO8Rs"
+domain="www.chatbase.co"
+defer>
+</script>
 </body>
 </html>
